--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": "^7.2",
-        "laravel/framework": "^5.6",
+        "illuminate/support": "^5.6 | ^5.7 | ^5.8 | ^6.0",
         "spatie/laravel-sluggable": "^2.1",
         "pishran/persian-slug": "^1.0"
     },
