--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": "^7.2",
         "illuminate/support": "^5.6 | ^5.7 | ^5.8 | ^6.0 | 7.*",
-        "spatie/laravel-sluggable": "^2.1",
+        "spatie/laravel-sluggable": "2.2.1 | ^2.4",
         "pishran/persian-slug": "^1.0"
     },
     "autoload": {
