--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,8 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "illuminate/support": "^5.6 | ^5.7 | ^5.8 | ^6.0 | 7.*",
-        "spatie/laravel-sluggable": "2.2.1 | ^2.4",
+        "php": "^7.3",
+        "spatie/laravel-sluggable": "^2.0",
         "pishran/persian-slug": "^1.0"
     },
     "autoload": {
