--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "spatie/laravel-sluggable": "^2.0",
         "pishran/persian-slug": "^1.0"
     },
