--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0|^9.0",
-        "spatie/laravel-sluggable": "^2.0",
+        "spatie/laravel-sluggable": "^2.0|^3.0",
         "pishran/persian-slug": "^1.0"
     },
     "autoload": {
